tests/samples/negative/traits/trait_impl_missing_method.ax
module trait_impl_missing_method;

trait Reader {
    fn read(self: &Self) -> i32;
}

struct File {
    handle: i32;
}

impl Reader for File {
}

fn main() -> i32 {
    return 0;
}
